[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Images/Items/Sword.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="Animation" id=2]
resource_name = "Sword_Attack"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 75, -0.25, 0, 0.25, 0, -75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.25, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.25, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 6, -0.25, 0, 0.25, 0, 14, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -2, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7 )
}

[sub_resource type="Animation" id=3]
resource_name = "Sword_recovery"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -6, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -75, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("HOLDER/ITEMS_HOLDER/SWORD:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[node name="Shooter_enemy" type="KinematicBody2D" groups=["ENEMY"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Recover" type="Timer" parent="."]
wait_time = 0.2

[node name="YIELD" type="Timer" parent="."]
wait_time = 0.15

[node name="HOLDER" type="Node2D" parent="."]

[node name="SWORD_ATK" type="Area2D" parent="HOLDER"]
position = Vector2( 0, -24 )

[node name="Collision" type="CollisionPolygon2D" parent="HOLDER/SWORD_ATK"]
position = Vector2( 0, 6 )
polygon = PoolVector2Array( 0, 8, 26, 2, 25, -11, 20, -17, 0, -22, -20, -17, -25, -11, -26, 2 )
disabled = true

[node name="ColorRect" type="ColorRect" parent="HOLDER"]
visible = false
margin_left = -28.0
margin_top = -46.0
margin_right = 28.0
margin_bottom = -24.0

[node name="ITEMS_HOLDER" type="Sprite" parent="HOLDER"]

[node name="SHIELD" type="Sprite" parent="HOLDER/ITEMS_HOLDER"]
position = Vector2( -6, -2 )
texture = ExtResource( 3 )
offset = Vector2( 0, -6 )

[node name="SWORD" type="Sprite" parent="HOLDER/ITEMS_HOLDER"]
position = Vector2( 6, -2 )
texture = ExtResource( 3 )
offset = Vector2( 0, -6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Sword_Attack = SubResource( 2 )
anims/Sword_recovery = SubResource( 3 )

[node name="6" type="Timer" parent="."]
wait_time = 0.6

[node name="1" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Recover" to="." method="_on_Recover_timeout"]
[connection signal="timeout" from="YIELD" to="." method="_on_YIELD_timeout"]
[connection signal="body_entered" from="HOLDER/SWORD_ATK" to="." method="_on_SWORD_ATK_body_entered"]
